--- a/includes/view/SC_All.css
+++ b/includes/view/SC_All.css
@@ -1,7 +1,10 @@
 /*
 ** to ignore Divi setting for content **
 */
-
+html{
+	scroll-behavior:smooth;
+	scroll-padding-top: 200px;
+}
 #page-container #main-content .container{
 	padding:0px;
 }
@@ -65,7 +68,7 @@ li{
 	padding-top: 8vw;
   padding-bottom: 16vw;
 	border-radius: 30px 30px 0px 0px;
-	overflow: hidden;
+	/* overflow: hidden; */
   /* bottom divide decoration */
 	position:relative;
   margin-bottom: 1vw;
@@ -78,6 +81,7 @@ li{
   height: 10vw;
   bottom: -0vw;
   position: absolute;
+	z-index: 2;
 }
 /* title styling */
 .supportcenter_title_container h1.entry-title{
@@ -139,14 +143,20 @@ li{
 	transform: rotateY(180deg);
 }
 .search-results{
-	font-size: 1.5em;
+	font-size: 1.2em;
 	line-height: 1.5em;
 	width: 100%;
 	background: #fff;
 	position: absolute;
-	z-index: 1;
+	z-index: 3;
+	border-radius: 10px;
+	box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
+#search-results > div:not(.spinner-loader) {
+	padding: 0 1em;
+	border-top: solid 1px #ddd;
+	}	
 @-webkit-keyframes spin {
   0% {
     transform: rotate(0deg);
@@ -174,6 +184,36 @@ li{
   -webkit-animation: spin 1s infinite linear;
   animation: spin 1s infinite linear;
 }
+
+
+/*
+** breadcrumms **
+*/
+.breadcrumms{
+	display: flex;
+	align-items: center;
+	font-size:1.1em;
+	font-weight:bold;
+	margin-left:7%;
+}
+.breadcrumms > div {
+	display: flex;
+	align-items: center;
+}
+.breadcrumms i{
+	font-size:1.5em;
+}
+.breadcrumms a{
+	color:#555;
+}
+.breadcrumms div:last-child :last-child{
+	color:#F39200;
+	cursor: not-allowed;
+	pointer-events: none;
+
+}
+
+
 
 
 /*
@@ -240,12 +280,17 @@ body .icon-and-capture i {
 		width:unset;
 		max-width:950px;
 	}
+	.breadcrumms {
+		margin-left: 2%;
+	}
 
 }
 
+
+
 @media screen and (max-width:680px) {
 	.supportcenter_title_container h1.entry-title {
-		font-size: 2.25em;
+		font-size: 3.3em;
 	}
 	.searchbox input {
 		font-size: 1.1em;
@@ -256,9 +301,15 @@ body .icon-and-capture i {
 	.searchbox button i {
 		font-size: 1em;
 	}
-	/* body .icon-and-capture i {
-		font-size:2.375em;
-	} */
+	.search-results{
+		font-size: 1em;
+	}
+	body .icon-and-capture i {
+		font-size: 2.375em;
+	}
+	.breadcrumms {
+		flex-wrap:wrap;
+	}
 	.icon-text-wrapper p {
 		font-size: 0.9em;
 	}
@@ -271,3 +322,8 @@ body .icon-and-capture i {
 	}
 }
 
+@media screen and (max-width:400px) {
+	.supportcenter_title_container h1.entry-title {
+		font-size: 2.25em;
+	}
+}
